# nomos

./: Makefile  POSTFIX.md  README.md  oracle.db
backend/: api.py  due_diligence.py  engine.py  generate_confirmation_pdf.py  generate_contract_pdf.py  netting_opinion_module.py  oracle_v3.py  test_calculations.py
docs/: PROJECT_STATUS.md  legal_audit_report.md
frontend/: client_portal.html  (+3 more)
oracle/: .coverage  README.md  config.py  errors.py  logging_config.py  oracle.db  pyproject.toml  types.py
oracle/collectors/: base.py  ecb.py  fake.py
oracle/core/: attestation.py  normalizer.py  sanity.py  store.py
oracle/dashboard/: __init__.py  app.py
oracle/fixtures/: demo_estr.yaml
oracle/integration/: irs_bridge.py
oracle/rules/: calendar.py  engine.py  registry.py
oracle/rules/impl/: r001_failure_to_pay.py  r002_breach_of_agreement.py  r003_cross_default.py  r004_illegality.py  r005_tax_event.py  r006_material_adverse_change.py
oracle/scheduler/: daily_run.py  verify_chain.py
oracle/scripts/: seed_demo_contract.py
oracle/tests/: conftest.py  test_attestation.py  test_chain_property.py  test_collectors_ecb.py  test_collectors_fake.py  test_pipeline_e2e.py  test_pipeline_live_ecb.py  test_rules_engine.py  test_rules_r001.py  test_rules_r002.py  test_rules_r003.py  test_rules_r004.py  test_rules_r005.py  test_rules_r006.py  test_sanity.py  test_seed_demo_contract.py  test_store.py  test_types.py
oracle/tests/fixtures/: minimal_estr.yaml
oracle/tests/fixtures/ecb/: estr_sample.json  euribor_12m_sample.json  euribor_3m_sample.json  euribor_6m_sample.json
(+32 files in other folders)
